<resources>
    <string name="app_name">Currency</string>

    <string name="icon_0">$</string>
    <string name="text_0">0</string>
    <string name="icon_1">₫</string>
    <string name="text_1">0</string>

    <string name="currency0">United States - Dollar</string>
    <string name="currency1">Vietnam - Dong</string>

    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="bs">BS</string>
    <string name="ce">CE</string>

</resources>