<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layout_0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/spinner_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:id="@+id/icon_0"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:gravity="center_vertical"
            android:text="@string/icon_0"
            android:textColor="@color/light_black"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/text_0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingStart="8dp"
            android:text="@string/text_0"
            android:textColor="@color/black"
            android:textSize="32sp"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <Spinner
        android:id="@+id/spinner_0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/currency0"
        android:dropDownWidth="match_parent"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/layout_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_0" />

    <LinearLayout
        android:id="@+id/layout_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/spinner_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_0" >

        <TextView
            android:id="@+id/icon_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:gravity="center_vertical"
            android:text="@string/icon_1"
            android:textColor="@color/light_black"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/text_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingStart="8dp"
            android:text="@string/text_1"
            android:textColor="@color/light_black"
            android:textSize="32sp"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <Spinner
        android:id="@+id/spinner_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/currency1"
        android:dropDownWidth="match_parent"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_1" />

    <Space
        android:id="@+id/space"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_1" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout_789"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space">

        <Space
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:background="@drawable/button_background" />

        <Button
            android:id="@+id/button_ce"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:elevation="0dp"
            android:text="@string/ce"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_bs"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:backgroundTintMode="src_in"
            android:drawableStart="@drawable/ic_baseline_backspace_24"
            android:elevation="0dp"
            android:paddingStart="50dp"
            android:textSize="24sp"
            tools:ignore="RtlSymmetry,SpeakableTextPresentCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_789"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout_456"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/button_7"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:elevation="0dp"
            android:text="@string/_7"
            android:textSize="24sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button_8"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:elevation="0dp"
            android:text="@string/_8"
            android:textSize="24sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button_9"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:elevation="0dp"
            android:text="@string/_9"
            android:textSize="24sp"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_456"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout_123"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_789">

        <Button
            android:id="@+id/button_4"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:elevation="0dp"
            android:text="@string/_4"
            android:textSize="24sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button_5"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:elevation="0dp"
            android:text="@string/_5"
            android:textSize="24sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button_6"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:elevation="0dp"
            android:text="@string/_6"
            android:textSize="24sp"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_123"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_456">

        <Button
            android:id="@+id/button_1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:elevation="0dp"
            android:text="@string/_1"
            android:textSize="24sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button_2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:elevation="0dp"
            android:text="@string/_2"
            android:textSize="24sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button_3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:elevation="0dp"
            android:text="@string/_3"
            android:textSize="24sp"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_0"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="3dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_123">

        <Space
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:background="@drawable/button_background" />

        <Button
            android:id="@+id/button_0"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:elevation="0dp"
            android:text="@string/_0"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_dot"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:elevation="0dp"
            android:text="@string/dot"
            android:textSize="24sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>